Fix color of login button on iphone.

--- a/css/style.css
+++ b/css/style.css
@@ -176,6 +176,7 @@ ul li a {
     margin-left: 7px;
     background-color: white;
     cursor: pointer;
+    color: black;
 }
 .centerdiv {
     margin: auto;
